--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,5 @@
 group 'io.flutterfastkit.fk_user_agent'
-version '2.0.0'
+version '2.1.0'
 
 buildscript {
     repositories {
@@ -22,6 +22,7 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
+    namespace 'io.flutterfastkit.fk_user_agent'
     compileSdkVersion 30
 
     defaultConfig {
